--- a/pom.xml
+++ b/pom.xml
@@ -16,17 +16,18 @@
 	<properties>
 		<java.version>17</java.version>
 		<cxf.version>3.5.0</cxf.version>
-		<cxf-xjc-plugin>3.3.1</cxf-xjc-plugin>
+		<cxf-xjc-plugin.version>3.3.1</cxf-xjc-plugin.version>
+		<gson.version>2.8.9</gson.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -51,11 +52,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-core</artifactId>
@@ -64,8 +65,14 @@
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-xjc-plugin</artifactId>
-			<version>${cxf-xjc-plugin}</version>
+			<version>${cxf-xjc-plugin.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>${gson.version}</version>
+		</dependency>
+
 
 	</dependencies>
 
@@ -86,7 +93,7 @@
 			<plugin>
 				<groupId>org.apache.cxf</groupId>
 				<artifactId>cxf-xjc-plugin</artifactId>
-				<version>${cxf-xjc-plugin}</version>
+				<version>${cxf-xjc-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>generate-sources</id>
