--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.driver-class-name = org.postgresql.Driver
 #JPA
 spring.jpa.database = POSTGRESQL
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL9Dialect
-spring.jpa.show-sql = true
+spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = validate
 
 #flyway
