Added authorization and authentication using Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.flyway.schemas = public
 spring.flyway.table = flyway_migration_history
 spring.flyway.validate-on-migrate = true
 spring.flyway.create-schemas = false
+
+#Const
+id = rgnrejgnerj
