Authentication is working properly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,14 @@ spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL9Dialect
 spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = validate
 
-#flyway
+#Flyway
 spring.flyway.enabled = true
 spring.flyway.schemas = public
 spring.flyway.table = flyway_migration_history
 spring.flyway.validate-on-migrate = true
 spring.flyway.create-schemas = false
 
-#Const
-id = rgnrejgnerj
+#Constant variables
+CBRFUrl = http://www.cbr.ru/scripts/XML_daily.asp
+user.login = admin
+user.password = admin
