--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<cxf.version>3.5.0</cxf.version>
 		<cxf-xjc-plugin.version>3.3.1</cxf-xjc-plugin.version>
 		<io.springfox.version>2.9.2</io.springfox.version>
+		<java-jwt.version>3.18.2</java-jwt.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -80,7 +81,7 @@
 		<dependency>
 			<groupId>com.auth0</groupId>
 			<artifactId>java-jwt</artifactId>
-			<version>3.18.2</version>
+			<version>${java-jwt.version}</version>
 		</dependency>
 	</dependencies>
 
