--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #Datasource
-spring.datasource.url = jdbc:postgresql://localhost:5432/smartsoft?currentSchema=public
+spring.datasource.url = jdbc:postgresql://${database.host}:${database.port}/${database.name}?currentSchema=${database.scheme}
 spring.datasource.username = postgres
 spring.datasource.password = qa1ws2ed3
 spring.datasource.driver-class-name = org.postgresql.Driver
@@ -12,12 +12,16 @@ spring.jpa.hibernate.ddl-auto = validate
 
 #Flyway
 spring.flyway.enabled = true
-spring.flyway.schemas = public
+spring.flyway.schemas = ${database.scheme}
 spring.flyway.table = flyway_migration_history
 spring.flyway.validate-on-migrate = true
 spring.flyway.create-schemas = false
 
 #Constant variables
 CBRFUrl = http://www.cbr.ru/scripts/XML_daily.asp
-user.login = admin
-user.password = admin
+
+#Database properties
+database.host = localhost
+database.port = 5432
+database.name = smartsoft
+database.scheme = public
